...
                android:textColor="@color/paragraph_color"
                android:elevation="5dp"
                android:layout_marginTop="25dp"
                />

        <EditText
                android:id="@+id/inputNewPassword"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:background="@drawable/box"
                android:ems="10"
                android:textAlignment="center"
                android:hint="@string/new_password"
...
                android:elevation="5dp"
                android:layout_marginTop="15dp"
                />


        <EditText
                android:id="@+id/inputNewRepeatedPassword"
                android:layout_width="340dp"
                android:layout_height="45dp"
                android:textSize="17sp"
                android:background="@drawable/box"
                android:fontFamily="@font/gadugib"
                android:ems="10"
...
