...
                android:src="@drawable/lock_icon"
                tools:layout_editor_absoluteX="257dp"
                tools:layout_editor_absoluteY="523dp" />


        <EditText
                android:id="@+id/inputEmail"
                android:layout_width="218dp"
                android:layout_height="36dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="83dp"
...
                android:textColor="@color/main_writing_color"
                android:textColorHighlight="#00000000"
                android:textColorLink="#FFFFFF"
                />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
...
